[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stockcharts"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" }
]
description = "Minimal Heiken Ashi stock chart generator"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["stocks", "charts", "heiken ashi", "finance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "yfinance>=0.2.38",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E","F","I"]
