[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stockcharts"
version = "0.6.1"
authors = [
  { name="Paul Boys", email="paul.d.boys@gmail.com" }
]
description = "NASDAQ stock screener using Heiken Ashi candles and RSI divergence for trend reversal detection with volume and price filtering"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["stocks", "nasdaq", "heiken ashi", "rsi", "divergence", "screener", "trading", "finance", "technical-analysis", "swing-trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
  "yfinance>=0.2.38",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "numpy>=1.24.0"
]

[project.urls]
Homepage = "https://github.com/paulboys/HeikinAshi"
Repository = "https://github.com/paulboys/HeikinAshi"
Issues = "https://github.com/paulboys/HeikinAshi/issues"

[project.scripts]
stockcharts-screen = "stockcharts.cli:main_screen"
stockcharts-plot = "stockcharts.cli:main_plot"
stockcharts-rsi-divergence = "stockcharts.cli:main_rsi_divergence"
stockcharts-plot-divergence = "stockcharts.cli:main_plot_divergence"
stockcharts-beta-regime = "stockcharts.cli:main_beta_regime"
stockcharts-plot-beta = "stockcharts.cli:main_plot_beta"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "mypy>=1.10.0",
  "pydocstyle>=6.3.0",
  "pandas-stubs>=2.0.0",
  "types-requests>=2.31.0",
  "pre-commit>=3.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","D","ANN","B","UP"]
ignore = ["D203","D212","D107","E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "ANN202", "ANN001", "ANN003", "ANN204", "D100", "D103", "D200", "D205", "F841", "B017"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = false
disallow_incomplete_defs = true
disallow_untyped_defs = true
show_error_codes = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "matplotlib.*",
    "pandas.*"
]
ignore_missing_imports = true

[tool.pydocstyle]
convention = "google"
add-ignore = "D107"

[[tool.mypy.overrides]]
module = [
  "stockcharts.indicators.divergence",
  "stockcharts.indicators.rsi",
  "stockcharts.indicators.pivots",
  "stockcharts.charts.divergence",
]
ignore_errors = true
